Now you can fill the board with 'x' and 'o'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>Jogo da velha</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
         <table>
             <tr>
@@ -24,10 +23,10 @@
                 <td class="cell" id="8"></td>
             </tr>
         </table>
-        <div class="fim_de_jogo">
-            <div class="texto"></div>
+        <div class="endgame">
+            <div class="text"></div>
         </div>
-        <button onclick="comecar_jogo()">Reiniciar</button>
+        <button onclick="startGame()">Reiniciar</button>
         <script src="script.js"></script>
     </body>
 </html>
